# NewsPrism

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  debug-perspectives-bug.html  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: config.yaml  editorial-values.yaml  feelgood_keywords.yaml  keywords.txt  nginx.conf  sources-certification.yaml  style-guide.md
docs/: cluster-diagnosis-2026-05-19.html  deploy-docker.md  onboarding.md
docs/design-docs/: core-beliefs.md  decisions.md
docs/plans/: 2026-04-16-publish-push-decoupling-design.md  2026-05-06-quality-storyline-wired-report-design.md
newsprism/: __init__.py  __main__.py  config.py  types.py
newsprism/repo/: __init__.py  db.py
newsprism/runtime/: __init__.py  audit.py  audit_ownership.py  (+4 more)
scripts/: check_sources.py  deploy.sh  download_fonts.py  golden_replay.py  impact_shadow_check.py
templates/: report-design-a.html  report-design-b.html  report-design-c.html  report-design-premium.html  report-template.html
tests/: test_audit.py  test_calibrate.py  test_calibrate_corrections.py  test_certification.py  test_clusterer.py  test_collection_schedule.py  test_dedup.py  test_deploy_script.py  test_editorial_planner.py  test_feedback.py  test_feelgood_scorer.py  test_freshness.py  test_history.py  test_impact.py  test_impact_subject_regions.py  test_llm_compat.py  test_ownership_gate.py  test_portal_analytics.py  test_portal_app.py  test_portal_auth.py  test_portal_db.py  test_quality.py  test_renderer.py  test_replay.py  test_repo_db.py  test_scheduler_hot_topics.py  test_scheduler_push.py  test_seeker.py  test_seeker_key_rotation.py  test_storyline.py  test_storyline_key_stability.py  test_summarizer_macro_topics.py  test_summarizer_translation.py
(+43 files in other folders)
